@@ -11,6 +11,8 @@ class InnoworkTicket extends InnoworkItem
     public $mConvertible = true;
     public $mNoAcl = true;
     public $mTypeTags = array('task', 'ticket');
+    public $mParentType = 'project';
+    public $mParentIdField = 'projectid';
     const ITEM_TYPE = 'ticket';
 
     //var $mNoAcl = true;
@@ -48,7 +50,7 @@ class InnoworkTicket extends InnoworkItem
         $this->mSearchResultKeys[] = 'done';
         $this->mSearchResultKeys[] = 'openedby';
         $this->mSearchResultKeys[] = 'assignedto';
-        
+
         $this->mViewableSearchResultKeys[] = 'id';
         $this->mViewableSearchResultKeys[] = 'title';
         $this->mViewableSearchResultKeys[] = 'projectid';
@@ -116,15 +118,15 @@ class InnoworkTicket extends InnoworkItem
             if (!isset($params['typeid']) or !strlen($params['typeid'])) {
             	$params['typeid'] = '0';
             }
-            
+
             if (!isset($params['openedby']) or !strlen($params['openedby'])) {
             	$params['openedby'] = '0';
             }
-            
+
             if (!isset($params['assignedto']) or !strlen($params['assignedto'])) {
             	$params['assignedto'] = '0';
             }
-                        
+
         if (count($params)) {
             $item_id = $this->mrDomainDA->getNextSequenceValue( $this->mTable.'_id_seq' );
 
